adjust about me and add potential avatar container overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -938,6 +938,7 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
   justify-content: center;
 
   margin-bottom: 33px;
+  overflow: hidden;
   padding: 0 55px;
   
   width: 100%;
